Closed
Bug 884020
Opened 9 years ago
Closed 9 years ago
Don't use the register keyword in SVG code
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)
References
Details
Attachments
(1 file, 1 obsolete file)
1.13 KB,
patch
|
Details | Diff | Splinter Review |
This breaks builds with recent clang and warnings-as-errors: 33:57.83 /media/storage/moz/src/content/svg/content/src/SVGFETurbulenceElement.cpp:267:3: error: 'register' storage class specifier is deprecated [-Werror,-Wdeprecated-register] 33:57.83 register long i, j; 33:57.83 ^~~~~~~~~ 33:57.83 /media/storage/moz/src/content/svg/content/src/SVGFETurbulenceElement.cpp:267:3: error: 'register' storage class specifier is deprecated [-Werror,-Wdeprecated-register] 33:57.83 register long i, j; 33:57.83 ^~~~~~~~~
Attachment #763775 -
Flags: review?(dholbert)
Assignee | ||
Updated•9 years ago
|
Assignee: nobody → ehsan
Comment 1•9 years ago
|
||
Comment on attachment 763775 [details] [diff] [review] Patch (v1) Looks like this has had the "register" keyword since we added support for feTurbulence in bug 326143. I'm happy to trust that compilers are smart enough to optimize this sort of thing on their own, particularly if the keyword is deprecated.
Attachment #763775 -
Flags: review?(dholbert) → review+
Assignee | ||
Comment 2•9 years ago
|
||
(In reply to comment #1) > Comment on attachment 763775 [details] [diff] [review] > --> https://bugzilla.mozilla.org/attachment.cgi?id=763775 > Patch (v1) > > Looks like this has had the "register" keyword since we added support for > feTurbulence in bug 326143. > > I'm happy to trust that compilers are smart enough to optimize this sort of > thing on their own, particularly if the keyword is deprecated. The compilers are even smarter than that! They just give you a blank look, roll their eyes, shake their head, and ignore you!
Assignee | ||
Comment 3•9 years ago
|
||
Attachment #763775 -
Attachment is obsolete: true
Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 4•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/8a8ef7f74a46
Keywords: checkin-needed
Comment 5•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/8a8ef7f74a46
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•