Bug 884020 - Don't use the register keyword in SVG code in order to fix the build with recent clangs; r=dholbert